add unit tests and fix some minor issues